webcompat/static/css/development/components/form.css
/*------Form------*/

.wc-Form-input {
  font: inherit;
  display: block;
  width: 100%;
  height: 34px;
  padding: 6px 12px;
  font-size: 14px;
  line-height: 1.42857;
  color: #555;
  background-color: #FFF;
  background-image: none;
  border: 1px solid #CCC;
  border-radius: 20px;
  padding: 0.5em;
  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset;
  transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
}
  .wc-Form-input:focus {
    border-color: #66AFE9;
    outline: 0px none;
    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px rgba(102, 175, 233, 0.6);
  }
  .wc-Form-input--heightAuto {
    height:auto;
  }
  .wc-Form-input::placeholder {
    color: #999;
    opacity: 1;
   }

  input[type="radio"] {
    margin:0 5px 0 0;
  }
.wc-Form-label {
  display:inline-block;
  margin-bottom:5px;
  color:#000;
  font-weight:700;
}
  .wc-Form-label--upload {
    position: relative;
    cursor: pointer;
    text-decoration: underline;
  }
/*------Form Validation------*/
.wc-Form-error .wc-Form-input {
  border-color: #ff0000;
}
.wc-Form-error .wc-Form-input:focus{
  border-color: #ff0000;
  box-shadow:none;
}
.wc-Form-error .wc-Form-helpInline {
  color: #ff0000;
  float: right;
}
.wc-Form-group {
  margin-bottom:1.6em;
}
.wc-Form-required {
  color:#ff0000;
}
legend.wc-Form-label {
  width: 100%;
}

.wc-Form-radio,
.radio-inline {
  width:100%;
  height: 34px;
  position: relative;
  display: inline-block;
  margin-bottom: 0px;
  vertical-align: middle;
  font-weight: 400;
  cursor: pointer;
}
.wc-Form-radio label,
.radio-inline label {
  display: inline-block;
  vertical-align: middle;
  font-weight: 300;
}
.form-opened {
  display: block;
}
.form-closed {
  display: none;
}

  @media (--viewport-600px) {
    .wc-Form-error .wc-Form-helpInline {
      float: none;
      display: block;
    }
    .Report-form .Button-group .Grid-cell {
      text-align:center !important;
    }
  }
  .wc-Form-validation {
    display: block;
    clear: both;
    position: relative;
  }
    .wc-Form-validation::after {
      content: "";
      display: block;
      width: 60px;
      height: 20px;
      position: absolute;
      right: 12px;
      top: 8px;
      background-repeat: no-repeat;
      background-size: contain;
    }

.wc-Form-validation .wc-Form-input {
  padding-right: 40px;
}
.wc-Form-noError .wc-Form-validation::after {
  background-image: url(../img/valid.svg);
}
.wc-Form-error .wc-Form-validation::after {
  background-image: url(../img/invalid.svg);
}
.wc-Form-noError .wc-Form-helpInline {
  display: none;
}
.wc-Form-error .wc-Form-input {
  border-color: var(--wc-background-dark);
}
.wc-Form-noError .wc-Form-input:focus{
  border-color: var(--wc-background-dark);
  box-shadow:none;
}

/* upload */
.wc-Form-upload {
  text-align: center;
}
  .wc-Form-upload-icon {
    font-size: 1.2em;
    margin: 0 .4em 0 0;
  }

